--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday!!! :)</title>
-  <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
+  <title>Happy Birthday Suchi</title>
+  <link href="https://fonts.googleapis.com/css2?family=Jua&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
+
+  <style>
+    body {
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fad0c4, #ffdde1);
+      background-size: 400% 400%;
+      animation: gradientBG 10s ease infinite;
+    }
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+  </style>
 </head>
 
 <body>
@@ -18,7 +31,7 @@
         <span data-node-name="greeting">Hey</span>
         <span data-node-name="name">Lydia</span>
       </h1>
-      <p class="two" data-node-name="greetingText">I really like your name btw!</p>
+      <p class="two" data-node-name="greetingText">I really like your name btw! </p>
     </div>
     <div class="three">
       <p data-node-name="text1">It's your birthday!!! :D</p>
@@ -90,8 +103,8 @@
         <img src="img/ballon3.svg" alt="">
       </div>
       <div class="footer">
-        <p>Made with love by Divyanshu</p>
-        <p>© Divyanshu Saraswat. All Rights Reserved</p>
+        <p>Made with 💖 by Divyanshu</p>
+        <p>© Divyanshu Saraswat 2025</p>
     </div>
     
     </div>
