--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/cat.avif" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/hbd.webp" alt="" class="lydia-dp" data-node-name="imagePath">
       <!-- <img src="img/hat.svg" alt="" class="hat"> -->
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
