--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
     
     </div>
-    <div class="eight">
+    <!-- <div class="eight" >
       <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
         <circle cx="20" cy="20" r="20" />
       </svg>
@@ -136,7 +136,7 @@
       <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
         <circle cx="20" cy="20" r="20" />
       </svg>
-    </div>
+    </div> -->
     <div class="nine">
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
