--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         <img src="img/ballon3.svg" alt="">
       </div>
       <div class="footer">
-        <p>Made with 💖 by Divyanshu</p>
-        <p>© Divyanshu Saraswat 2025</p>
+        <p>Made with 💖 by Divyanshu | © Divyanshu Saraswat 2025</p>
+        <p></p>
     </div>
     
     </div>
