--- a/index.html
+++ b/index.html
@@ -106,8 +106,12 @@
         <p>Made with 💖 by Divyanshu | © Divyanshu Saraswat 2025</p>
         <p></p>
     </div>
-    
     </div>
+    <script>
+      setTimeout(() => {
+        document.querySelector('.nine').style.display = 'block';
+      }, 3000);
+    </script>
     <!-- <div class="eight" >
       <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
         <circle cx="20" cy="20" r="20" />
